﻿[B]wersja 1.1.33[/B] - 2015-11-7
- Zmiana epg dropbox sie zepsul :/

[B]wersja 1.1.32[/B] - 2015-11-1
- dodanie polsat sport news

[B]wersja 1.1.31[/B]- 2015-10-13
- naprawienie sciagania epg z alternatywnej lokalizacji

[B]wersja 1.1.30[/B]- 2015-10-13
- Dodano alternatywona lokalizacje i plik zip

[B]wersja 1.1.29[/B]- 2015-10-09
- naprawienie kanalu tv4. usun stream i odpal odnowa kanal

[B]wersja 1.1.28[/B]- 2015-10-07
- Dodanie canal plus sport 2

[B]wersja 1.1.27[/B]- 2015-9-23
- Naprawienie strumieni kanalow Eleven

[B]wersja 1.1.26[/B]- 2015-8-27
- Dodanie kanalow eleven

[B]wersja 1.1.24[/B] - 2015-8-14
- Zmniejszenie jakosci disco polo party


[B]wersja 1.1.23[/B] - 2015-7-8
- usuniecie wersji zip ze wzgledu ze niedlugo bedzie wylaczony serwer


[B]wersja 1.1.22[/B] - 2015-4-29
- dodanie paramount channel

[B]wersja 1.1.21[/B] - 2015-4-24
- Naprawienie Discovery Science
- Naprawienie Eska TV
- Usuniecie Fox Life
- Dodanie Fox Comedy
- Usuniecie 13 Ulica
- Usuniecie Filmbox Action
- Usuniecie Filmbox Extra
- !!! INFO !!!
  Aby usunac nieaktywne kanaly najlepiej jest wejsc w ustawienia wtyczki i 
	wyczyscic baze.
  Aby Eska TV i Discovery Science dzialalo spowrotem nalezy na klawiaturze nacisnac C i usunac stream.


[B]wersja 1.1.20[/B] - 2015-4-7
- Naprawienie VOX MUSIC TV. Klawisz C usun stream i odpal odnowa

[B]wersja 1.1.19[/B] - 2015-3-16
- Naprawienie url dla fokus tv i stopklatka
	POTRZEBNE BEDZIE USUNIECIE STREAMU!


[B]wersja 1.1.18[/B] - 2015-3-16
- poprawki

[B]wersja 1.1.17[/B] - 2015-2-23
- Naprawiono zzipowane EPG. Szybszy czas sciagania
- Wlaczono zip epg by default


[B]wersja 1.1.15[/B] - 2015-2-13
- Dodano 2 nowe skorki

[B]wersja 1.1.14[/B] - 2015-1-30
- Dodano Fokus TV 

[B]wersja 1.1.11[/B] - 2014-12-15
- Skompresowana wersja

[B]wersja 1.1.10[/B] - 2014-12-08
- Dodanie kanalu Stopklatka

[B]wersja 1.1.9[/B] - 2014-12-02
- Dodanie kanalu Extreme Sports
 
[B]wersja 1.1.8[/B] - 2014-11-18
- Usuniecie debugging mode
- Zmiana log
