@@ -14,7 +14,7 @@
 	</extension>
 </addon>
 
-<addon id="script.etvguide" name="e-TVGuide" version="1.1.33" provider-name="thebedi">
+<addon id="script.etvguide" name="e-TVGuide" version="1.1.34" provider-name="thebedi">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
 		<import addon="script.module.simplejson" version="2.0.10"/>
