@@ -21,8 +21,8 @@
 	<string id="30116">Wyszukaj obrazki kanałów w</string>
 	<string id="30117">Wybierz EPG</string>
 	<string id="30150">Ładowanie nie powiodło się!</string>
-	<string id="30151">Ustawienia mogą być błędne lub Twoje IP </string>
-	<string id="30152">zostało zbanowane.</string>
+	<string id="30151">Nie mozna zaladowac danych, </string>
+	<string id="30152">sprawdz ustawienia albo sprobuj ponownie za chwile.</string>
 	<string id="30153">ponieważ ustawienia są błędne!</string>
 	<string id="30154">Wygląda na to, że skórka której używasz</string>
 	<string id="30155">nie jest komatybilna z obecną wersją TV Guide.</string>
