@@ -1,4 +1,7 @@
-﻿[B]wersja 1.1.33[/B] - 2015-11-7
+﻿[B]wersja 1.1.34[/B] - 2015-11-9
+- Zmiana informacji jak nie moze zaladowac epg
+
+[B]wersja 1.1.33[/B] - 2015-11-7
 - Zmiana epg dropbox sie zepsul :/
 
 [B]wersja 1.1.32[/B] - 2015-11-1
